# OpenGL-3D-N-body-problem-simulation-in-C

./: 2D_fast.c  2D_fast_with_cols.c  3D.c  3D_fast.c  CMakeLists.txt  main.c
